Fixed color contrast violations

--- a/chamber/styles/join-small.css
+++ b/chamber/styles/join-small.css
@@ -179,8 +179,7 @@
 
 
     select,  
-    section,
-    #membershipLevel{
+    section{
         color: var(--white-col);
     }
 
